# schachmatt

./: CMakeLists.txt  README.md  arraylist.c  linkedlist.c  list.h  main.c  minimax.c  minimax.h  minimax_demo.c  schach.c  schach.h  sltest.c  sorted.h  sortedlist.c  tests.c
